--- a/angular2app/src/assets/styles/main.css
+++ b/angular2app/src/assets/styles/main.css
@@ -3141,12 +3141,22 @@ textarea.form-control {
   text-align: center;
   padding: 3px 2px; }
 
+.ui-datepicker-calendar td a.ui-state-disabled {
+  opacity: 0.7; }
+
 .ui-datepicker-calendar td a.ui-state-default:hover, .ui-datepicker-calendar td a.ui-state-active {
   font-family: HelveticaNeue, sans-serif;
   text-decoration: none !important;
   border-radius: 3px;
   background-color: rgba(50, 73, 119, 0.8);
   color: #ffffff; }
+
+.ui-datepicker-calendar td a.ui-state-disabled:hover {
+  font-family: HelveticaNeue, sans-serif;
+  text-decoration: none !important;
+  border-radius: 3px;
+  background-color: transparent;
+  color: #4A4A4A; }
 
 .ui-datepicker-calendar td.ui-state-disabled a.ui-state-default {
   color: #969696; }
@@ -3206,6 +3216,14 @@ textarea.form-control {
 .isError .form-control {
   border: 1px solid #DB4F4F; }
 
+.input-group .mobileArea {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  z-index: 5; }
+
 @media (max-width: 1440px) {
   .container-starbook .sidebar {
     right: 0;
@@ -3264,6 +3282,9 @@ textarea.form-control {
 
   .footer-links {
     height: 50px; } }
+@media (max-width: 480px) {
+  .input-group .mobileArea {
+    display: block; } }
 html, body {
   background-color: #FAFAFA !important; }
 
@@ -3938,6 +3959,7 @@ html, body {
   position: absolute;
   top: 9px;
   left: -141px;
+  padding-left: 0;
   font-size: 14px;
   color: #212121;
   letter-spacing: 0.09px;
@@ -4130,10 +4152,44 @@ html, body {
     padding-left: 0; }
 
   .profile-page .content-page {
-    padding: 58px 15px 0 15px; } }
+    padding: 58px 15px 0 15px; }
+
+  .profile-settings .form-group {
+    margin-top: 40px; }
+
+  .profile-settings .password-block {
+    margin-top: 40px; }
+
+  .profile-settings .form-group label {
+    top: -27px;
+    left: 0;
+    padding-left: 0;
+    text-align: left; } }
 @media (max-width: 645px) {
   .profile-page .content-page {
     padding: 58px 0 0 15px; } }
+@media (max-width: 560px) {
+  .profile-page .content-page {
+    padding: 58px 0 0 15px; }
+
+  .profile-page .container-starbook {
+    padding: 0 0 0 15px; }
+
+  .profile-settings {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 70px; }
+
+  .form-group.double-input input.first {
+    width: 63%; }
+
+  .form-group.double-input input.second {
+    width: 33%;
+    margin-left: 0; } }
+@media (max-width: 480px) {
+  .profile-settings .header {
+    font-size: 17px; } }
 .dark-screen {
   display: block;
   position: fixed;
@@ -4449,6 +4505,22 @@ html, body {
 .popup .confirm-order-form .form-group .btn.btn-secondary {
   background-color: #EFF1F3; }
 
+@media (max-width: 480px) {
+  .popup {
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin-left: 0;
+    border-radius: 0;
+    overflow-y: scroll; }
+
+  .login-offer {
+    margin-bottom: 70px; }
+
+  .popup .form-group .btn.btn-secondary {
+    margin-bottom: 70px; } }
 .landing {
   display: block;
   width: 100%;
